--- a/src/modules/navigation/components/Container/Container.module.css
+++ b/src/modules/navigation/components/Container/Container.module.css
@@ -7,7 +7,7 @@ body {
   letter-spacing: 0.02em;
 }
 
-/* Utilits */
+/* Utilities */
 h1,
 h2,
 h3,
@@ -46,12 +46,16 @@ ul {
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
+    padding-left: 32px;
+    padding-right: 32px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .container {
     width: 1280px;
+    padding-left: 91px;
+    padding-right: 91px;
   }
 }
 
