--- a/src/modules/balance/components/Balance/Balance.module.css
+++ b/src/modules/balance/components/Balance/Balance.module.css
@@ -1,5 +1,4 @@
 .common {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,6 +20,7 @@
 
 .balanceInputBlock {
   display: flex;
+  position: relative;
 }
 
 .balanceBlock {
@@ -127,4 +127,15 @@
   .input {
     margin-right: 16px;
   }
+}
+h3 {
+  margin: 0;
+}
+p {
+  margin: 0;
+}
+.modal {
+  position: absolute;
+  left: 3px;
+  top: 62px;
 }
