--- a/src/modules/navigation/components/Container/Container.module.css
+++ b/src/modules/navigation/components/Container/Container.module.css
@@ -36,10 +36,41 @@ ul {
   padding-left: 20px;
   padding-right: 20px;
 }
+.background-top {
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  width: 100%;
+  height: 527px; /*check*/
+  background-color: #f2f5fc;
+  border-bottom-left-radius: 120px;
+}
+
+.home-mob-wrap {
+  display: flex;
+  margin-top: 40px;
+  margin-bottom: 10px;
+  align-items: center;
+  justify-content: flex-end;
+}
 
 @media screen and (min-width: 320px) {
   .container {
     width: 320px;
+  }
+  /* mobile */
+
+  .background-top {
+    height: 286px;
+  }
+
+  .background-top_for-mobile {
+    height: 330px;
+  }
+
+  .home-mob-wrap {
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
 
@@ -48,6 +79,17 @@ ul {
     width: 768px;
     padding-left: 32px;
     padding-right: 32px;
+  }
+  /* tablet */
+  .background-bottom {
+    position: absolute;
+    bottom: 0;
+    min-height: 100%;
+    width: 100%;
+    z-index: -1;
+    background-image: url('../../../../images/kapusta_bottom.png');
+    background-repeat: repeat-x;
+    background-position: bottom;
   }
 }
 
