--- a/src/Views/AuthPage/AuthPage.module.css
+++ b/src/Views/AuthPage/AuthPage.module.css
@@ -26,13 +26,13 @@
   padding-right: 25px;
 }
 
-.logo {
+/* .logo {
   color: #000;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.18;
   margin-bottom: 5px;
-}
+} */
 
 .slogan {
   font-weight: 700;
