--- a/src/modules/reports/components/IncomeList/IncomeList.module.css
+++ b/src/modules/reports/components/IncomeList/IncomeList.module.css
@@ -4,6 +4,8 @@
   justify-content: center;
 }
 .icon {
+  width: 63px;
+  height: 56.44px;
   /* filter: invert(71%) sepia(65%) saturate(5152%) hue-rotate(345deg)
     brightness(99%) contrast(104%); */
   /* filter: invert(9%) sepia(34%) saturate(3834%) hue-rotate(198deg)
