--- a/src/modules/reports/components/ExpensesItem/ExpensesItem.module.css
+++ b/src/modules/reports/components/ExpensesItem/ExpensesItem.module.css
@@ -1,7 +1,7 @@
 .link {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 
   width: 85px;
