--- a/src/modules/reports/components/ExpensesItem/ExpensesItem.module.css
+++ b/src/modules/reports/components/ExpensesItem/ExpensesItem.module.css
@@ -6,5 +6,16 @@
 
   width: 85px;
 
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+
+  color: #52555f;
+
   text-decoration: none;
+}
+.category {
+  letter-spacing: 0.02em;
 }
