--- a/src/modules/reports/components/ExpensesList/ExpensesList.module.css
+++ b/src/modules/reports/components/ExpensesList/ExpensesList.module.css
@@ -6,10 +6,10 @@
 .icon {
   /* filter: invert(71%) sepia(65%) saturate(5152%) hue-rotate(345deg)
     brightness(99%) contrast(104%); */
-  /* filter: invert(9%) sepia(34%) saturate(3834%) hue-rotate(198deg)
-    brightness(90%) contrast(97%); */
+  filter: invert(9%) sepia(34%) saturate(3834%) hue-rotate(198deg)
+    brightness(90%) contrast(97%);
 }
-.icon:hover {
+.item:hover .icon {
   filter: invert(71%) sepia(65%) saturate(5152%) hue-rotate(345deg)
     brightness(99%) contrast(104%);
 }
