--- a/src/css/App.css
+++ b/src/css/App.css
@@ -30,7 +30,13 @@ ul {
   margin: 0;
   list-style: none;
 }
-
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 @media screen and (min-width: 768px) {
   /* tablet */
   .background-bottom {
