--- a/src/modules/reports/components/ExpensesItem/ExpensesItem.module.css
+++ b/src/modules/reports/components/ExpensesItem/ExpensesItem.module.css
@@ -6,15 +6,19 @@
 
   width: 85px;
 
+  text-decoration: none;
+}
+p {
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
-  color: #52555f;
+  margin-top: 5px;
+  margin-bottom: 5px;
 
-  text-decoration: none;
+  color: #52555f;
 }
 .category {
   letter-spacing: 0.02em;
