--- a/src/Views/ReportsPage/Expenses/Expenses.module.css
+++ b/src/Views/ReportsPage/Expenses/Expenses.module.css
@@ -3,7 +3,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  align-self: center;
+
+  margin-left: auto;
+  margin-right: auto;
 
   width: 320px;
 }
