--- a/src/modules/Summary/summary.module.css
+++ b/src/modules/Summary/summary.module.css
@@ -1,4 +1,5 @@
 .wrapper {
+  margin-top: 32px;
   display: flex;
   justify-content: center;
   box-shadow: 5px 10px 20px rgba(170, 178, 197, 0.4);
