--- a/src/Views/ReportsPage/Expenses/Expenses.module.css
+++ b/src/Views/ReportsPage/Expenses/Expenses.module.css
@@ -1,4 +1,9 @@
 .wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 34px;
+}
+.wrap {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,4 +13,23 @@
   margin-right: auto;
 
   width: 320px;
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper {
+    width: 704px;
+
+    background: #ffffff;
+    box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
+    border-radius: 30px;
+  }
+  .wrap {
+    width: 704px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .wrapper {
+    width: 1034px;
+  }
 }
