--- a/src/Views/ReportsPage/Income/Income.module.css
+++ b/src/Views/ReportsPage/Income/Income.module.css
@@ -1,12 +1,34 @@
 .wrapper {
+  margin-left: auto;
+  margin-right: auto;
+}
+.wrap {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  align-self: center;
 
   margin-left: auto;
   margin-right: auto;
 
   width: 320px;
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper {
+    width: 704px;
+
+    background: #ffffff;
+    box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
+    border-radius: 30px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .wrapper {
+    width: 1034px;
+  }
+  .wrap {
+    width: 704px;
+  }
 }
