--- a/src/Views/ReportsPage/Income/Income.module.css
+++ b/src/Views/ReportsPage/Income/Income.module.css
@@ -1,6 +1,7 @@
 .wrapper {
   margin-left: auto;
   margin-right: auto;
+  margin-top: 34px;
 }
 .wrap {
   display: flex;
@@ -22,13 +23,13 @@
     box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
     border-radius: 30px;
   }
+  .wrap {
+    width: 704px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .wrapper {
     width: 1034px;
-  }
-  .wrap {
-    width: 704px;
   }
 }
