--- a/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
+++ b/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
@@ -5,7 +5,7 @@
 .product {
   border: 2px solid #f6f7fc;
   width: 288px;
-  height: 38px;
+  height: 44px;
   border-radius: 16px 0px 0px 0px;
 }
 
@@ -97,9 +97,9 @@ color: #e62c1c;
     margin-top: 50px;
   }
 }
-.calendarWrapper > div {
+/* .calendarWrapper > div {
   width: auto;
-}
+} */
 
 .calendarWrapper input {
   width: 86px;
@@ -127,13 +127,11 @@ color: #e62c1c;
 
 @media screen and (min-width: 768px) {
   .calendarWrapper {
-    width: 104px;
-    display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 0;
     margin-bottom: 0;
-    margin-right: 36px;
+    margin-left: 25px;
   }
 
   .calendarWrapper input {
