--- a/src/modules/balance/components/Modal/Modal.module.css
+++ b/src/modules/balance/components/Modal/Modal.module.css
@@ -12,6 +12,7 @@
   background: linear-gradient(117.84deg, #1d346a 2.84%, #031634 67.28%);
   box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
   border-radius: 30px;
+  z-index: 20;
 }
 
 h3 {
