--- a/src/modules/AuthComponent/AuthComponent.module.css
+++ b/src/modules/AuthComponent/AuthComponent.module.css
@@ -3,12 +3,14 @@
   width: 280px;
   padding: 40px 20px;
   border-radius: 4px;
-  box-shadow: 8px -6px 16px -2px #8c8c8c;
+  border-radius: 30px;
+  box-shadow: 5px 10px 20px rgba(170, 178, 197, 0.4);
 }
 
 @media screen and (min-width: 768px) {
   .container {
     width: 426px;
     padding: 70px 10px;
+    box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
   }
 }
