--- a/src/modules/AuthForm/AuthForm.module.css
+++ b/src/modules/AuthForm/AuthForm.module.css
@@ -1,18 +1,31 @@
 .form {
   margin: 0 auto;
 }
-
-.form__title {
+.form__title_first {
+  text-align: center;
+  width: 238px;
   font-size: 10px;
   font-weight: 400;
   letter-spacing: 0.04em;
   color: #52555f;
-  text-align: center;
+
   margin: 0 auto;
   font-family: 'Roboto';
 }
 
-.googleImage__bachground {
+.form__title {
+  text-align: start;
+  width: 238px;
+  font-size: 10px;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  color: #52555f;
+
+  margin: 0 auto;
+  font-family: 'Roboto';
+}
+
+.googleImage__background {
   display: block;
   width: 120px;
   background-color: #f6f7fb;
@@ -28,7 +41,7 @@
 }
 
 .form_field {
-  margin: 30px 0;
+  margin: 17px 0;
 }
 
 .form__input {
@@ -38,7 +51,7 @@
   height: 52px;
   padding: 0 20px;
   outline: none;
-  margin: 0 auto;
+  margin: 7px auto;
   border: none;
   background: #f6f7fb;
   border-radius: 30px;
@@ -78,6 +91,7 @@
 }
 
 .form__list {
+  padding: 0;
   display: flex;
   list-style: none;
   justify-content: center;
@@ -85,16 +99,25 @@
   margin: 40px auto 0;
 }
 
-.form__item {
+.form__item:not(:last-child) {
   margin-right: 15px;
 }
 
 @media screen and (min-width: 768px) {
+  .form__title_first {
+    width: 259px;
+    font-size: 12px;
+  }
   .form__title {
+    width: 259px;
     font-size: 12px;
   }
   .form__input {
+    margin: 10px auto;
     width: 258.92px;
+  }
+  .form_field {
+    margin: 17px 0;
   }
   .form__input_error {
     width: 258.92px;
