--- a/src/modules/SecondPage/TransactionTableRow/TransactionTableRow.module.css
+++ b/src/modules/SecondPage/TransactionTableRow/TransactionTableRow.module.css
@@ -1,27 +1,84 @@
 .tableRow {
-  border: none;
-  border-bottom: 2px solid #f2f8f8;
-  width: 746px;
-  height: 32px;
+  position: relative;
 
-  font-size: 12px;
+  border-bottom: 2px solid #f2f8f8;
+
+  font-family: Roboto, sans-serif;
+  font-size: 8px;
+  line-height: 1.16;
   color: #52555f;
 }
 
 .button {
-  width: 32px;
-  height: 32px;
-  padding: 7px;
   border: none;
   background-color: transparent;
 }
 
-.button:hover {
-  border-radius: 50%;
-  background-color: #f5f6fb;
-  cursor: pointer;
+.tableDataSum {
+  font-size: 12px;
+  font-weight: 700;
 }
 
-.sum {
-  font-weight: 700;
+.minus {
+  margin-right: 5px;
+}
+
+@media screen and (max-width: 767px) {
+  .tableRow {
+    width: 280px;
+  }
+
+  .tableRow td:not(:nth-child(2)) {
+    padding-top: 15px;
+    padding-bottom: 10px;
+  }
+
+  .tableDataDate {
+    vertical-align: bottom;
+  }
+
+  .tableDataDescription {
+    position: absolute;
+    top: 15%;
+    left: 0;
+    padding: 0;
+    font-size: 12px;
+    font-weight: 700;
+  }
+
+  .tableDataCategory {
+    text-align: left;
+    vertical-align: bottom;
+    width: 82px;
+  }
+
+  .tableDataSum {
+    text-align: right;
+    padding-right: 10px;
+  }
+
+  .tableDataBtn {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .tableRow {
+    width: 746px;
+    height: 32px;
+
+    font-size: 12px;
+  }
+
+  .button {
+    width: 32px;
+    height: 32px;
+    padding: 7px;
+  }
+
+  .button:hover {
+    border-radius: 50%;
+    background-color: #f5f6fb;
+    cursor: pointer;
+  }
 }
