--- a/src/modules/SecondPage/Page/Page.module.css
+++ b/src/modules/SecondPage/Page/Page.module.css
@@ -11,7 +11,14 @@
   box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
   border-radius: 0px 30px 30px 30px;
 }
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 704px;
+  }
+}
 
-.tables {
-  display: flex;
+@media screen and (min-width: 778px) {
+  .tables {
+    display: flex;
+  }
 }
