add categories from backend

--- a/src/modules/reports/components/ExpensesItem/ExpensesItem.module.css
+++ b/src/modules/reports/components/ExpensesItem/ExpensesItem.module.css
@@ -5,7 +5,8 @@
   align-items: center;
 
   /* width: 85px; */
-  min-width: 85px;
+  /* min-width: 85px; */
+  /* max-width: 105px; */
 
   text-decoration: none;
 }
