--- a/src/Views/HomePage/HomePage.module.css
+++ b/src/Views/HomePage/HomePage.module.css
@@ -3,6 +3,9 @@
   flex-direction: column;
   align-items: center;
 }
+.pageName {
+  display: none;
+}
 
 @media screen and (min-width: 768px) {
   .balanceBlock {
