--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,7 +5,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   line-height: 1.17;
-  letter-spacing: 0.02em;
+  margin: 0;
 }
 
 /* Utilities */
@@ -36,6 +36,29 @@ ul {
   box-sizing: border-box;
   padding-left: 20px;
   padding-right: 20px;
+}
+.authBlock {
+  position: relative;
+}
+.background-top {
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  width: 100%;
+  height: 285px;
+  /*check*/
+  background-color: #f2f5fc;
+  border-bottom-left-radius: 120px;
+}
+.background-bottom {
+  position: absolute;
+  bottom: 0;
+  min-height: 100%;
+  width: 100%;
+  z-index: -1;
+  background-image: url('../images/kapusta_bottom.png');
+  background-repeat: repeat-x;
+  background-position: bottom;
 }
 @media screen and (min-width: 768px) {
   /* tablet */
