--- a/src/modules/AuthComponent/AuthComponent.module.css
+++ b/src/modules/AuthComponent/AuthComponent.module.css
@@ -1,7 +1,7 @@
 .container {
   background-color: white;
   width: 280px;
-  padding: 40px 20px;
+  padding: 40px 0;
   border-radius: 4px;
   border-radius: 30px;
   box-shadow: 5px 10px 20px rgba(170, 178, 197, 0.4);
