--- a/src/modules/reports/components/ExpensesItem/ExpensesItem.module.css
+++ b/src/modules/reports/components/ExpensesItem/ExpensesItem.module.css
@@ -4,9 +4,9 @@
   justify-content: space-between;
   align-items: center;
 
-  /* width: 85px; */
+  width: 85px;
   /* min-width: 85px; */
-  /* max-width: 105px; */
+  /* max-width: 95px; */
 
   text-decoration: none;
 }
@@ -16,6 +16,8 @@
   line-height: 14px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+
+  text-align: center;
 
   margin-top: 5px;
   margin-bottom: 5px;
