--- a/src/css/App.css
+++ b/src/css/App.css
@@ -37,9 +37,9 @@ ul {
   padding-left: 20px;
   padding-right: 20px;
 }
-.authBlock {
+/* .authBlock {
   position: relative;
-}
+} */
 .background-top {
   position: absolute;
   top: 0;
