--- a/src/modules/SecondPage/TransactionTableRow/TransactionTableRow.module.css
+++ b/src/modules/SecondPage/TransactionTableRow/TransactionTableRow.module.css
@@ -66,7 +66,7 @@
   .tableRow {
     width: 746px;
     height: 32px;
-    position: absolute;
+    /* position: absolute; */
     font-size: 12px;
   }
 
