--- a/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
+++ b/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
@@ -76,11 +76,11 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+/* @media screen and (min-width: 1024px) {
   .table {
     width: 746px;
     height: 38px;
     margin-left: 32px;
     margin-top: 60px;
   }
-}
+} */
