--- a/src/Views/HomePage/HomePage.module.css
+++ b/src/Views/HomePage/HomePage.module.css
@@ -65,9 +65,13 @@
     z-index: inherit;
   }
 }
-
-/* @media screen and (max-width: 767px) {
+@media screen and (min-width: 1280px) {
   .container {
-    max-width: 704px;
+    width: 1034px;
+    height: 100vh;
+    background-color: #fff;
+    border-radius: 0 30px 30px 30px;
+    box-shadow: 0 10px 60px rgb(170 178 197 / 20%);
+    padding: 28px 30px 48px 31px;
   }
-} */
+}
