--- a/src/modules/SecondPage/IncomeExpense/IncomeExpense.module.css
+++ b/src/modules/SecondPage/IncomeExpense/IncomeExpense.module.css
@@ -1,75 +1,25 @@
 .nav {
-  flex-shrink: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  bottom: 0;
-  display: flex;
-  height: auto;
-  justify-content: space-between;
-  left: 0;
-  overflow: hidden;
-  position: fixed;
-  width: 100%;
-  z-index: 10;
+  margin-left: 91px;
 }
-
 .button {
-  padding: 7px 32px;
+  width: 138px;
+  height: 40px;
   background: #fafbfd;
+  border-radius: 20px;
   border: none;
-  color: #52555f;
-  /* position: fixed; */
 }
-
-.button:hover,
-.button:active {
-  background: #ff751d;
-  color: #ffffff;
-}
-
-.button:not(:last-child) {
-  /* margin-right: 10px; */
-}
-
 .link {
-  color: #52555f;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   font-weight: 700;
   text-decoration: none;
-  line-height: 1.16;
+  line-height: 14px;
+  align-items: center;
+  text-align: center;
   letter-spacing: 0.02em;
   text-transform: uppercase;
-  width: 94px;
-  height: 40px;
 }
-.link:hover,
-.link:active {
-  background: #ff751d;
-  color: #ffffff;
-}
-@media screen and (min-width: 768px) {
-  .nav {
-    align-items: center;
 
-    /* flex-direction: row; */
-    height: 40px;
-    justify-content: flex-start;
-    margin: 58px auto 0;
-    position: relative;
-    z-index: inherit;
-  }
-
-  .button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 7px 32px;
-    background: #fafbfd;
-    border: none;
-    color: #52555f;
-    border-radius: 30px 30px 0 0;
-  }
+.activeLink {
+  cursor: default;
+  /* composes: link; */
+  color: #e61e17;
 }
