--- a/src/modules/SecondPage/Page/Page.module.css
+++ b/src/modules/SecondPage/Page/Page.module.css
@@ -1,32 +1,17 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* display: block;
+  display: block;
   width: 1098px;
   height: 579px;
 
   margin-left: 91px;
 
   background: #ffffff;
-
+  /* shadow 1 */
 
   box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
-  border-radius: 0px 30px 30px 30px; */
+  border-radius: 0px 30px 30px 30px;
 }
-
-.stats {
-  @media screen and (min-width: 768px) {
-    margin-top: 48px;
-  }
-  @media screen and (min-width: 1280px) {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 59px;
-  }
-}
-
-/* @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .container {
     max-width: 704px;
   }
@@ -36,4 +21,4 @@
   .tables {
     display: flex;
   }
-} */
+}
