--- a/src/modules/SecondPage/Summary/Summary.module.css
+++ b/src/modules/SecondPage/Summary/Summary.module.css
@@ -1,68 +1,26 @@
-.wrapper {
-  margin-top: 32px;
+.summary {
+  display: inline-flex;
+  flex-direction: column;
+  margin-left: 75px;
+  margin-top: 60px;
+  margin-right: 32px;
+  width: 230px;
+}
+
+.title {
+  background: #f5f6fb;
+  border-radius: 20px 20px 0px 0;
+
+  height: 38px;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 14px;
   display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
   justify-content: center;
-  box-shadow: 5px 10px 20px rgba(170, 178, 197, 0.4);
-  border-radius: 20px;
-}
 
-.list {
-  display: flex;
-  margin: 7px 0px 7px 0px;
-}
-
-.listItem {
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 16px;
-  text-align: center;
-}
-
-.listItem:first-child {
-  border-right: 1px solid #e0e5eb;
-}
-
-.expenses {
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 16px;
-  text-align: center;
-  color: #e53935;
-}
-
-.income {
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 16px;
-  text-align: center;
-  color: #407946;
-}
-
-@media screen and (max-width: 771px) {
-  .wrapper {
-    background-color: white;
-  }
-
-  .listItem:first-child {
-    padding: 20px 15px 25px 13px;
-  }
-
-  .listItem:last-child {
-    padding: 20px 10px 25px 13px;
-  }
-}
-
-@media screen and (min-width: 772px) {
-  .listItem {
-    display: flex;
-    padding: 15px 20px 15px 20px;
-  }
-
-  .expenses {
-    margin-left: 15px;
-  }
-
-  .income {
-    margin-left: 15px;
-  }
+  color: #000000;
 }
