--- a/src/modules/reports/components/ExpensesItem/ExpensesItem.module.css
+++ b/src/modules/reports/components/ExpensesItem/ExpensesItem.module.css
@@ -4,8 +4,7 @@
   justify-content: space-between;
   align-items: center;
 
-  /* width: 85px; */
-  min-width: 85px;
+  width: 93px;
 
   text-decoration: none;
 }
@@ -15,6 +14,8 @@
   line-height: 14px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+
+  text-align: center;
 
   margin-top: 5px;
   margin-bottom: 5px;
