--- a/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
+++ b/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
@@ -8,13 +8,94 @@
 }
 
 @media screen and (min-width: 768px) {
-  .secondTable {
-    width: 620px;
-    height: 38px;
-    margin-left: 32px;
+  .table {
+    width: 100%;
+    max-width: 624px;
+    margin-top: 50px;
     border-collapse: collapse;
   }
+
+  thead {
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 14px;
+
+    text-align: left;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+
+    color: #000000;
+  }
+
+  .table th {
+    width: 624px;
+    height: 38px;
+    padding: 5px;
+
+    font-weight: bold;
+    background: #f5f6fb;
+  }
+
+  .table th:nth-child(3) {
+    text-align: center;
+  }
+
+  .table th:nth-child(4) {
+    text-align: right;
+  }
+
   .scroll {
+    display: inline-block;
+
+    width: 100%;
+    max-width: 624px;
+    height: 360px;
+    overflow-y: scroll;
+  }
+
+  .secondTable {
+    width: 100%;
+    max-width: 624px;
+    border-collapse: collapse;
+  }
+
+  .secondTable tr {
+    height: 40px;
+
+    text-align: center;
+    border: none;
+    border-bottom: 2px solid #f2f8f8;
+    border-left: 2px solid #f2f8f8;
+    border-right: 2px solid #f2f8f8;
+  }
+
+  .table thead tr th:first-child {
+    padding-left: 15px;
+    border-radius: 20px 0 0 0;
+  }
+  .table thead tr th:last-child {
+    border-radius: 0 20px 0 0;
+  }
+
+  .scroll::-webkit-scrollbar {
+    width: 6px;
+  }
+  .scroll::-webkit-scrollbar-thumb {
+    background-color: #ff751d;
+    border-radius: 2px;
+  }
+}
+
+/* @media screen and (min-width: 1024px) {
+  .table {
+    max-width: 746px;
+    height: 38px;
+    margin-left: 32px;
+    margin-top: 60px;
+  }
+} */
+
+/* .scroll {
     display: block;
     height: 250px;
     overflow-y: scroll;
@@ -27,60 +108,4 @@
   .scroll::-webkit-scrollbar-thumb {
     background-color: #ff751d;
     border-radius: 2px;
-  }
-
-  .table {
-    max-width: 624px;
-    max-height: 38px;
-    margin-top: 50px;
-    padding-left: 40px;
-    padding-right: 40px;
-    border-collapse: collapse;
-  }
-
-  .table th {
-    width: 746px;
-    height: 38px;
-    font-weight: bold;
-    padding: 5px;
-    background: #f5f6fb;
-    border: none;
-    border-bottom: 5px solid #f2f8f8;
-  }
-
-  thead {
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 14px;
-
-    align-items: center;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-
-    color: #000000;
-  }
-
-  .table td {
-    border: none;
-    border-bottom: 2px solid #f2f8f8;
-    border-left: 2px solid #f2f8f8;
-    width: 746px;
-    height: 32px;
-  }
-
-  .table thead tr th:first-child {
-    border-radius: 20px 0 0 0;
-  }
-  .table thead tr th:last-child {
-    border-radius: 0 20px 0 0;
-  }
-}
-
-/* @media screen and (min-width: 1024px) {
-  .table {
-    width: 746px;
-    height: 38px;
-    margin-left: 32px;
-    margin-top: 60px;
-  }
-} */
+  } */
